ipc/ipdl/test/ipdl/error/badProtocolInclude.ipdl
include protocol "I.DONT.EXIST.ipdl";

// error: nonexistent protocol ^^^

protocol badProtocolInclude {
child: Msg();
};
